--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,18 @@
-hello
+<html>
+<head>
+    <title>Student CCA Portal Home</title>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+</head>
+<body>
+    {% include 'header.html' %}
+    <div class='container'>
+        <p>
+            <span class='highlight-white'>What would you like to do today?</span>
+        </p>
+        <span class='highlight-pink'>I would like to <a href="/add">ADD</a></span><br>
+        <span class='highlight-pink'>I would like to <a href="/view">VIEW</a></span>
+        {% include 'footer.html' %}
+    </div>
+    
+</body>
+</html>
