i think i completed most of it just need to insert juan's methods and make it look nicer i guess it works u can test?

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,7 +56,7 @@ img {
 
 table td { 
     width: 10em; 
-    border: 0.5px solid #193d1d;
+    border: 0.5px solid #ffffff;
     font-weight: bold;
 }
 
