--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
             <span class='highlight-white'>What would you like to do today?</span>
         </p>
         <span class='highlight-pink'>I would like to <a href="/add">ADD</a></span><br>
-        <span class='highlight-pink'>I would like to <a href="/view">VIEW</a></span>
+        <span class='highlight-pink'>I would like to <a href="/view">VIEW</a></span><br>
+        <span class='highlight-pink'>I would like to <a href="/edit">EDIT</a></span>
         {% include 'footer.html' %}
     </div>
     
