still cannot figure out how to make the nabber stuff the same size Moses pls help

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -40,8 +40,8 @@
     <table>
         <form action='{{form_meta["action"]}}' method='{{form_meta["method"]}}'>
             <tr>
-                <td><span class='highlight-pink'>Student Name:</span></td>
-                <td><span class='highlight-pink'><input type='hidden' name='choice' value='{{choice}}'>{{choice}}:</span></td>
+                <td><span class='highlight-pink'>Student Name</span></td>
+                <td><span class='highlight-pink'><input type='hidden' name='choice' value='{{choice}}'>{{choice}}</span></td>
             </tr>
             <tr>
                 <td><span class='highlight-pink'><input name='name' type='hidden' value='{{data.keys()|join("")}}'>{{data.keys()|join("")}}</span></td>
