--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,37 @@
-<header class='main-heading'>
-    <h1><span class='highlight-blue'>Student CCA Portal</span></h1>
+<!-- navbar -->
+<div class='navbar'>
+    <a href="/">Home</a>
+    <div class="dropdown">
+        <button class="dropbtn"><a href='/add'>Add</a>
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="/add?choice=CCA">CCA</a>
+            <a href="/add?choice=Activity">Activity</a>
+        </div>
+    </div>
+    <div class='dropdown'>
+        <button class='dropbtn'><a href='/view'>View</a>
+            <i class='fa fa-caret-down'></i>
+        </button>
+        <div class='dropdown-content'>
+            <a href='/view?choice=Student'>Student</a>
+            <a href='/view?choice=Class'>Class</a>
+            <a href='/view?choice=CCA'>CCA</a>
+            <a href='/view?choice=Activity'>Activity</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn"><a href='/edit'>Edit</a>
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="/add?choice=CCA">CCA</a>
+            <a href="/add?choice=Activity">Activity</a>
+        </div>
+    </div>
+</div>
+
+<header class='main-heading'>  
+    <h1><span class='orange'>NY Hub: Student CCA Portal</span></h1>
 </header>
