--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,24 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
 </head>
 <body>
-    {% include 'header.html' %}
-    <div class='container'>
+    <!-- <div class='container'>
         <p>
             <span class='highlight-white'>What would you like to do today?</span>
         </p>
         <span class='highlight-pink'>I would like to <a href="/add">ADD</a></span><br>
         <span class='highlight-pink'>I would like to <a href="/view">VIEW</a></span><br>
         <span class='highlight-pink'>I would like to <a href="/edit">EDIT</a></span>
+        
         {% include 'footer.html' %}
     </div>
+
     
+     -->
+
+{% include 'header.html' %}
+    <div class='container'>
+    <span class='highlight-white'>YOU WON'T LAST 30 SECONDS PLAYING THIS GAME</span>
+    
+    </div>
 </body>
 </html>
