--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,12 @@
 <!-- navbar -->
 <div class='navbar'>
-    <a href="/">Home</a>
+    <img src="static/images/nyjc.png" alt="nyjc logo" >
+    <div class="dropdown">
+        <button class="dropbtn"><a href='/'>Home</a>
+            <i class="fa fa-caret-down"></i>
+        </button>
+    </div>
+    
     <div class="dropdown">
         <button class="dropbtn"><a href='/add'>Add</a>
             <i class="fa fa-caret-down"></i>
@@ -26,12 +32,12 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="/add?choice=CCA">CCA</a>
-            <a href="/add?choice=Activity">Activity</a>
+            <a href="/edit?choice=CCA+Membership">CCA</a>
+            <a href="/edit?choice=Activity+Participation">Activity</a>
         </div>
     </div>
 </div>
 
 <header class='main-heading'>  
-    <h1><span class='orange'>NY Hub: Student CCA Portal</span></h1>
+    <h1><span class='highlight-blue'>NY Hub: Student Portal</span></h1>
 </header>
