--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@ body{
     /* margin value of auto places the content in the center */
     padding: 5px;
     margin: auto;
-    color: #d05a1b
+    color: lightblue
 }
 
 .container {
@@ -57,7 +57,8 @@ body{
         
 img {
     float: left;
-    padding: 10px;
+    height: 60px;
+    padding: 7px;
 }
 
 table td { 
@@ -110,7 +111,7 @@ table td {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-} */
+}  */
 
 /* The dropdown container */
 .dropdown {
@@ -132,7 +133,7 @@ table td {
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #d05a1b;
+  background-color: #3d3d6b;
 }
 
 /* Dropdown content (hidden by default) */
@@ -164,3 +165,95 @@ table td {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+select {
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding: 5px;
+    font-size: 14px;
+    color: #555;
+    background-color: rgb(255, 255, 255);
+    background-image: none;
+    border: 1px solid rgb(41, 18, 18);
+}
+select>option{
+    font-size: 14px;
+    color: #555;
+    background-color: rgb(247, 247, 247);
+    height: 50px;
+    padding: 15px;
+    border: 1px solid rgb(41, 18, 18);
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+ 
+/* The container must be positioned relative: */
+/* .custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element: */
+}
+
+/* .select-selected {
+  background-color: DodgerBlue;
+}
+ */ 
+/* Style the arrow inside the select element: */
+/* .select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+ */
+/* Point the arrow upwards when the select box is open (active): */
+/* .select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+ */
+/* style the items (options), including the selected item: */
+/* .select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+} */
+
+/* Style items (options): */
+/* .select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+} */
+
+/* Hide the items when the select box is closed: */
+/* .select-hide {
+  display: none;
+}
+ */
+/* .select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+} */
