--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Student CCA Portal View page</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+    {% include "head.html" %}
 </head>
 <body>
     {% include 'header.html' %}
@@ -31,8 +31,11 @@
         </tr>
    
     </table>
+    {% if error %}
+    <span style='color: red'>Error: {{error}}</span>
+    {% endif %}
     <br>
-    <input type='submit' value='search'>  </form>
+    <input type='submit' value='Search'>  </form>
     {% endif %}        
 
     {% if page_type == 'result' %}
@@ -46,7 +49,6 @@
     {% endfor %}
     </table>
     {% endif %}
-    {% include 'footer.html' %}
     </div>
 </body>   
 </html>
