--- a/templates/header.html
+++ b/templates/header.html
@@ -32,8 +32,12 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="/edit?choice=CCA+Membership">CCA</a>
-            <a href="/edit?choice=Activity+Participation">Activity</a>
+            <a href="/edit?choice=Add+CCA+Member">Add CCA Member</a>
+            <a href="/edit?choice=Add+Activity+Participant">Add Activity Participant</a>
+            <a href="/edit?choice=Edit+CCA+Member">Edit CCA Member</a>
+            <a href="/edit?choice=Edit+Activity+Participant">Edit Activity Participant</a>
+            <a href="/edit?choice=Remove+CCA+Member">Remove CCA Member</a>
+            <a href="/edit?choice=Remove+Activity+Participant">Remove Activity Participant</a>
         </div>
     </div>
 </div>
