--- a/templates/edit.html
+++ b/templates/edit.html
@@ -17,24 +17,31 @@
             {% endfor %}
         </select>
     <br><br>
-        <input type='submit' value='Submit'>
+        <input type='submit' value='Next'>
     </form>
     {% endif %}
 
     {% if page_type == 'search'%}
-        <br>
+    <br>
     <table>
         <form action='{{form_meta["action"]}}' method='{{form_meta["method"]}}'>
+            {% for key, value in form_data.items() %}
             <tr>
-                <td><span class='highlight-pink'><input value='{{choice}}' type='hidden' name='choice'>Student Name:</span></td>
-                <td><input id='name' type='text' name='name'></td>
+                <td><span class='highlight-pink'><label for='{{key}}'>{{key}}:</span></td>
+                <td><input id='{{key}}' type='text' name='{{key}}' value='{{value}}'></td>
             </tr>
-    </table>
+            {% endfor %}
+            <input type='hidden' name='action' value='{{action}}'>
+    </table> 
     {% if error %}
     <span style='color: red'>Error: {{error}}</span>
     {% endif %}
     <br>
+    {% if action != 'add' %}
     <input type='submit' value='Search'>
+    {% else %}
+    <input type='submit' value='Confirm'>
+    {% endif %}
     </form>
     {% endif %}
 
@@ -42,32 +49,33 @@
         <br>
     <table>
         <form action='{{form_meta["action"]}}' method='{{form_meta["method"]}}'>
+            {% for key, value in form_data.items() %}
             <tr>
-                <td><span class='highlight-pink'>Student Name</span></td>
-                <td><span class='highlight-pink'><input type='hidden' name='choice' value='{{choice}}'>{{choice}}</span></td>
+                <td><span class='highlight-pink'>{{key}}:</span></td>
+                {% if action == 'edit'%}
+                <td><input type='{{tdtype}}' name='{{key}}' value='{{value}}'></td>
+                {% endif %}
+                {% if action in ['add', 'remove'] %}
+                <td><input type='{{tdtype}}' name='{{key}}' value='{{value}}'><span class='highlight-blue'>{{value}}</span></td>
+                {% endif %}
             </tr>
-            <tr>
-                <td><span class='highlight-pink'><input name='name' type='hidden' value='{{data.keys()|join("")}}'>{{data.keys()|join("")}}</span></td>
-                <td><input id='edit' type='text' name='edit' value="{{data.values()|join('')}}"></td>
-            </tr>
-    </table>
+            {% endfor %}
+    </table> 
+        <input type='hidden' name='action' value='{{action}}'>
         <br>
-    <input type='submit' value='Done'>
-    </form>
-    {% endif %}
+    <input type='submit' value='Confirm'>    
+    {% endif %} 
 
     {% if page_type == 'success' %}
         <br>
+    {% for key, value in form_data.items() %}
     <table>
         <tr>
-            <td><span class='highlight-pink'>Student Name:</span></td>
-            <td><span class='highlight-pink'>{{choice}}:</span></td>
-        </tr>
-        <tr>
-            <td><span class='highlight-pink'>{{name}}</span></td>
-            <td><span class='highlight-pink'>{{new}}</span></td>
+            <td><span class='highlight-pink'>{{key}}:</span></td>
+            <td><span class='highlight-pink'>{{value}}</span></td>
         </tr>
     </table>
+    {% endfor %}
     {% endif %}
     </div>
 </body>
