--- a/templates/view.html
+++ b/templates/view.html
@@ -17,7 +17,7 @@
             {% endfor %}
         </select>
     <br><br>
-        <input type='submit' value='Submit'>
+        <input type='submit' value='Next'>
     </form>       
     {% endif %}
 
