--- a/templates/add.html
+++ b/templates/add.html
@@ -38,11 +38,14 @@
     <br>
     </table>
     <br>
-    
-    <input type='submit' value='{{button}}'>
-    {% if page_type == 'confirm' %}
-    <input type="submit" value="No" onclick="history.back()">
+    {% if error %}
+    <span style='color: red'>Error: {{error}}</span>
     {% endif %}
+    <br>
+    <input type='submit' value='{{button}}'>
+    <!-- {% if page_type == 'confirm' %}
+    <input type="submit" value="No" onclick="history.back()">
+    {% endif %} -->
     </form>
     {% endif %}
     
