--- a/templates/edit.html
+++ b/templates/edit.html
@@ -27,7 +27,7 @@
         <form action='{{form_meta["action"]}}' method='{{form_meta["method"]}}'>
             {% for key, value in form_data.items() %}
             <tr>
-                <td><span class='highlight-pink'><label for='{{key}}'>{{key}}:</span></td>
+                <td><span class='highlight-pink'><label for='{{key}}'>{{key}}</span></td>
                 <td><input id='{{key}}' type='text' name='{{key}}' value='{{value}}'></td>
             </tr>
             {% endfor %}
@@ -48,7 +48,7 @@
         <form action='{{form_meta["action"]}}' method='{{form_meta["method"]}}'>
             {% for key, value in form_data.items() %}
             <tr>
-                <td><span class='highlight-pink'>{{key}}:</span></td>
+                <td><span class='highlight-pink'>{{key}}</span></td>
                 {% if action == 'edit'%}
                 <td><input type='{{tdtype}}' name='{{key}}' value='{{value}}'></td>
                 {% endif %}
@@ -71,7 +71,7 @@
     {% for key, value in form_data.items() %}
     <table>
         <tr>
-            <td><span class='highlight-pink'>{{key}}:</span></td>
+            <td><span class='highlight-pink'>{{key}}</span></td>
             <td><span class='highlight-pink'>{{value}}</span></td>
         </tr>
     </table>
