--- a/templates/header.html
+++ b/templates/header.html
@@ -43,5 +43,5 @@
 </div>
 
 <header class='main-heading'>  
-    <h1><span class='highlight-blue'>NY Hub: Student Portal</span></h1>
+    <h1><span class='highlight-blue'>NY Hub: Student CCA Portal</span></h1>
 </header>
