--- a/templates/edit.html
+++ b/templates/edit.html
@@ -63,7 +63,8 @@
     <span style='color: red'>Error: {{error}}</span>
     {% endif %}
     <br>
-    <input type='submit' value='Confirm'>    
+    <input type='submit' value='Yes'>  
+    <input type="button" value="No" onclick="history.back()">
     {% endif %} 
 
     {% if page_type == 'success' %}
