fixed the website

--- a/templates/add.html
+++ b/templates/add.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal Add page</title>
+    <title>NY Hub Add page</title>
     {% include "head.html" %}
 </head>
 
@@ -32,8 +32,13 @@
     {% for key, value in form_data.items() %}
     <tr>
         <td><span class='highlight-pink'><label for='{{key}}'>{{key}}</label></span></td>
-        <td><input id='{{key}}' type='{{tdtype}}' name='{{key}}' value='{{value}}'><span class='highlight-purple'>{{value}}</span></td>
-    </tr>   
+        {% if page_type == 'confirm'%}
+        <td><input id='{{key}}' type='{{tdtype}}' name='{{key}}' value='{{value}}'><span class='highlight-blue'>{{value}}</span></td>
+        {% else %}
+        <td><input id='{{key}}' type='{{tdtype}}' name='{{key}}' value='{{value}}'><span class='highlight-blue'></span></td>
+        {% endif %}
+    </tr> 
+        
     {% endfor %}
     <br>
     </table>
@@ -54,9 +59,8 @@
     {% for key, value in form_data.items() %}
     <tr>
         <td><span class='highlight-pink'>{{key}}</span></td>
-        <td><span class='highlight-purple'>{{value}}</span></td>
-    </tr>
-    <br>    
+        <td><span class='highlight-blue'>{{value}}</span></td>
+    </tr>   
     {% endfor %}
     </table>
     {% endif %}
