--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal Home</title>
+    <title>NY Hub Home</title>
     {% include "head.html" %}
 </head>
 <body>
