--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal Edit page</title>
+    <title>NY Hub Edit page</title>
     {% include "head.html" %}
 </head>
 <body>
@@ -34,6 +34,9 @@
             <input type='hidden' name='action' value='{{action}}'>
     </table> 
     <br>
+    {% if error %}
+    <span style='color: red'>Error: {{error}}</span><br>
+    {% endif %}
     {% if action != 'add' %}
     <input type='submit' value='Search'>
     {% else %}
@@ -49,8 +52,12 @@
             {% for key, value in form_data.items() %}
             <tr>
                 <td><span class='highlight-pink'>{{key}}</span></td>
-                {% if action == 'edit'%}
+                {% if action == 'edit' %}
+                {% if key in ['Role', 'Hours', 'Award'] %}
                 <td><input type='{{tdtype}}' name='{{key}}' value='{{value}}'></td>
+                {% else %}
+                <td><input type='hidden' name='{{key}}' value='{{value}}'><span class='highlight-blue'>{{value}}</span></td>
+                {% endif %}
                 {% endif %}
                 {% if action in ['add', 'remove'] %}
                 <td><input type='{{tdtype}}' name='{{key}}' value='{{value}}'><span class='highlight-blue'>{{value}}</span></td>
@@ -59,9 +66,6 @@
             {% endfor %}
     </table> 
         <input type='hidden' name='action' value='{{action}}'>
-    {% if error %}
-    <span style='color: red'>Error: {{error}}</span>
-    {% endif %}
     <br>
     <input type='submit' value='Yes'>  
     <input type="button" value="No" onclick="history.back()">
