--- a/templates/header.html
+++ b/templates/header.html
@@ -40,6 +40,11 @@
             <a href="/edit?choice=Remove+Activity+Participant">Remove Activity Participant</a>
         </div>
     </div>
+    <div class="dropdown">
+        <button class='dropbtn'><a href='/help'>Help</a>
+            <i class='fa fa-caret-down'></i>
+        </button>
+    </div>
 </div>
 
 <header class='main-heading'>  
