--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <option value="/add">Add</option>
         <option value="/view">View</option>
         <option value="/edit">Edit</option>
+        <option value="/help">Help</option>
     </select>
     </div>
 </body>
