--- a/templates/add.html
+++ b/templates/add.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal Add page</title>
+    <title>Student CCA Portal - Add</title>
     {% include "head.html" %}
 </head>
 
