--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal Edit page</title>
+    <title>Student CCA Portal - Edit</title>
     {% include "head.html" %}
 </head>
 <body>
