--- a/templates/view.html
+++ b/templates/view.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Student CCA Portal View page</title>
+    <title>Student CCA Portal - View</title>
     {% include "head.html" %}
 </head>
 <body>
@@ -44,7 +44,7 @@
     {% for key,value in data.items() %}
     <tr>
         <td><span class='highlight-pink'>{{table_header[key]}}</span></td>
-        <td><span class='highlight-pink'>{{value}}</span></td>
+        <td><span class='highlight-blue'>{{value}}</span></td>
     </tr>
     {% endfor %}
     </table>
